# kafka-stream-monitor

./: README.md  setup.cfg
