[metadata]
name = kafka-stream-monitor
version = 0.0.1
license = MIT
description = A simple python project to monitor stream applications running on Kafka
long_description = file: README.rst
author = <Author name>
author_email = <Optional: author e-mail>
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src